--- a/style.css
+++ b/style.css
@@ -275,3 +275,13 @@ main {
     flex-direction: column;
   }
 }
+
+/* Open and close modal */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 24px;
+}
